fixed heading alignment and margins

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 
 .heading {
     position: relative;
-    margin-left: 12.5%;
+    margin-left: 14.5%;
     top: 0px;
     left: 67px;
     float: left;
@@ -43,7 +43,7 @@ nav {
     height: auto;
     margin-left: 15%;
     color: #4aaaa5;
-    padding: 20px 25px 0px 25px;
+    padding: 20px 25px 20px 25px;
     border-style: solid;
     border-width: 1px;
     border-color: #4aaaa5;
@@ -54,8 +54,6 @@ nav {
 .bio {
     font-size: 28px;
     font-weight: bold;
-    /* font-family: "Georgia", "Times", "Times New Roman", "serif"; */
-    /* font-family: "Arial", "Helvetica Neue", "Helvetica", "sans-serif"; */
 }
 
 .background {
@@ -66,6 +64,7 @@ nav {
     border-width: 1px 0px 0px 0px;
     border-color: #4aaaa5;
     height: auto;
+    flex: 1
 }
 
 a {
@@ -74,18 +73,13 @@ a {
 }
 
 #prof {
-    height: 20%;
-    width: 20%;
+    height: 25%;
+    width: 25%;
     float: left;
     padding: 20px 20px 20px 0px;
+    margin-top: 10px;
 
 }
-
-/* .par {
-    color: #777777;
-    padding-top: 20px;
-    line-height: 180%;
-} */
 
 input {
     width: 100%;
@@ -112,9 +106,10 @@ input {
     border-width: 8px 0px 0px 0px;
     border-color: #4aaaa5;
     color: #ffffff;
-    /* flex-shrink: 0; */
-    /* margin-bottom: 0px;
-    margin-top: auto; */
+    /* position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%; */
 }
 
 .container {
